--- a/sign_form.html
+++ b/sign_form.html
@@ -8,7 +8,55 @@
     <link rel="stylesheet" href="css/sign_form.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <header>
+        <div class="logo">
+            <img src="img/odin-lined.png" alt="logo">
+            <h2>Odin</h2>
+        </div>
+        <p><a href="">Photo by </a></p>
+    </header>
+    <main>
+        <div class="info">
+            <p>This is not a real online servide! You know you need something</p>
+            <p>Like this in your life to help you realize your deepest dreams</p>
+            <p>Sign up now to get started</p>
+            <p>You know you want to.</p>
+        </div>
+        <div class="sign">
+            <form action="#" method="get">
+                <legend>Let's do this!</legend>
+                <div>
+                    <label for="Fname">First Name</label><br>
+                    <input type="text" id="Fname" name="Fname">
+                </div>
+                <div>
+                    <label for="Lname">Last Name</label><br>
+                    <input type="text" id="Lname" name="Lname">
+                </div>
+                <div>
+                    <label for="email">Email</label><br>
+                    <input type="email" id="email" name="mail">
+                </div>
+                <div>
+                    <label for="Pnumb">Phone Number</label><br>
+                    <input type="phone" id="Pnumb" name="Pnumb">
+                </div>
+                <div>
+                    <label for="password">Password</label><br>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div>
+                    <label for="Cpassword">Confirm Password</label><br>
+                    <input type="password" id="Cpassword" name="Cpassword">
+                </div>
+                <button type="submit">Create Account</button>
+            </form>
+        </div>
+        <div class="log">
+            <p>Already have an account?<a href="#">Log in</a></p>
+        </div>
+
+    </main>
     
 </body>
 </html>
